# qt6-installer-gui

./: CMakeLists.txt  README.md  install.sh  main.cpp
.github/: fUNDING.yml
